      - cop_label now in hints_hash (5.11 Change #33656)
      - silence use64bitint warnings
      - fix t/inspect-btest.t test count
      - fix t/inspect-this.t not ok 568 - ->LEN 0.
	skip all PV->LEN tests >= 5.10
      - removed //= from BTest to support 5.8 and older
  _09 Reini Urban
      - fix 5.8.8 test PVIV->NV
      - < 5.8 and blead DEBUGGING builds fail, the rest passes

1.11 - (releaed by Josh Ben Jore)
  - rt#29257 - patches from Reini Urban & Jim Cromie

1.10
  - License clarification. B::Generate is available under the same
    terms as perl. Dist now includes copy of Artistic and GPL licenses.

1.09
  - Merged distributions:
    - S/SW/SWALTERS/B-Generate-1.06_1.tar.gz
      - Removed ppaddr setting for OP_LIST
      - Call Perl_fold_constants instead of fold_constants
    - M/MS/MSCHWERN/B-Generate-1.06_2.tar.gz
      - Awesome!
      - fold_constants is called w/ thread context
    - J/JJ/JJORE/B-Generate-1.07.tar.gz
      - Populates specialsv_list
    - J/JJ/JJORE/B-Generate-1.08.tar.gz
      - Nothing interesting, apparently.
    - RT #4747:
      - changes to compile for 5.8.1+ by Jim Cromie <jcromie@cpan.org>
        - altered Build.PL to add extra_compiler_flags when building for 5.8.x,
          ie: -DPERL_CUSTOM_OPS -DPERL_CUSTOM_OPCODES
          these didnt work for me under 5.6.x
        - silenced redefined warnings with $SIG{__WARN__}
        - various XS tweaks: casts, aTHX_, and Perl_ prefix on symbols
        - various pm tweaks to silence warnings

1.06 Sun Jul 28 18:43:06 CEST 2002
    - Added support for changing PV in SvPV

1.06 Tue Jul  2 14:37:43 CEST 2002
    - If PL_compcv is set, we will return that cv instead
      of trying to find the root. PL_compcv is only set
      during compilation when we only can safely work with ops
      during that compilation, and the next approach won't work
      since optree isn't complete.

1.05 Thu Jun 27 23:57:02 CEST 2002
    - Apperently we the previous release was a bit too quick.