@@ -14,6 +14,14 @@ my %list_nums = (
     145 => "5.011000",
     142 => "5.010000",
     141 => "5.008008",	# probably should be 5.008(00[12])?
+    141 => "5.008007",
+    141 => "5.008006",
+    141 => "5.008005",
+    141 => "5.008004",
+    141 => "5.008003",
+    141 => "5.008002",
+    141 => "5.008001",
+    141 => "5.008000",
     );
 
 my $got = B::opnumber("list");
